--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,46 +1,42 @@
-.home {
-    padding: 20px;
-    margin: 3rem auto;
-    max-width: 400px;
-    border: 1px solid rgba(0,0,0,0.3);
-    box-shadow: 0px 5px 10px rgba(0,0,0,0.3);
-    border-radius: 5px;
-    background-color: aliceblue;
+.container {
     display: flex;
+    align-items: center;
     flex-direction: column;
-    gap: 0.5rem;
-    min-height: 150px;
+    margin: 0 auto;
+    width: 500px;
+    max-width: 50%;
 }
 
-.home h1 {
-    text-align: center;
+.container h1 {
+    font-size: 1.8em;
+    margin: 84px 0px 24px;   
 }
 
-.home input {
-    padding: 5px;
+.container input {
+    width: 100%;
+    padding: 24px;
+    background-color: #e6e6e6;
     border-radius: 5px;
     border: none;
     outline: none;
-    margin: 0.7rem 0;
-    
+    font-size: 16px;
 }
 
-.home input:focus {
-    border: 1px solid rgba(133, 131, 131, 0.3);
-}
-
-.home button {
-    cursor: pointer;
+.container button {
+    width: 100%;
     border: none;
     outline: none;
-    background-color: rgb(77, 77, 77);
+    padding: 24px;
+    font-size: 16px;
+    font-weight: 700;
+    background: #ea4c89;
     color: white;
-    padding: 10px;
     border-radius: 5px;
-    margin-bottom: 0.7rem;
-    transition: .2s;
+    margin: 12px 0 84px;
+    transition: filter 0.2s;
+    cursor: pointer;
 }
 
-.home button:hover {
-    background-color: black;
+.container button:hover {
+    filter: brightness(0.9);
 }
