--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,10 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;    
+}
+
+body, input, h1, h2, h3, h4, h5, h6, p, a, span, strong, button {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
