--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -23,6 +23,9 @@
 
 .container .avatar {
     flex: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .container header img {
